# paperless-metadata-manager

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  example.env  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-publish.yml  release.yml
app/: __init__.py  config.py  llm_client.py  main.py  paperless_client.py
app/routers/: base.py  correspondents.py  custom_fields.py  document_types.py  health.py  tags.py
app/static/js/: app.js
app/templates/: base.html  index.html
tests/: __init__.py  test_client.py
