[project]
name = "paperless-tag-manager"
version = "0.2.3"
description = "Bulk tag management for Paperless-ngx"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Ben Humphry" }
]
keywords = ["paperless", "paperless-ngx", "document-management", "tags"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/yourusername/paperless-tag-manager"
Repository = "https://github.com/yourusername/paperless-tag-manager"
Issues = "https://github.com/yourusername/paperless-tag-manager/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
